# Point2Mesh

./: .gitmodules  LICENSE  README.md  cd_normal_fscore.cu
network/: dataset.py  network.py  test.py  train.py  utils.py
postprocess/: CMakeLists.txt  main.py  postprocess.cpp  run_demo.py
preprocess_with_gt_mesh/: CMakeLists.txt  Intersection.h  calc_candidates_label.cpp  calc_geo_dis.cpp  main.py  octree.h  preprocess_mesh.cpp  propose_candidates.cpp  run_demo.py  sample_pc.cpp
preprocess_with_pc/: CMakeLists.txt  main.py  propose_candidates.cpp  run_demo.py
